error with infinite scroll

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
           <!-- Картки зображень -->
         </div>
         </div>
-    <script src="./index.js" type="module"></script>
+    <script src="./index.js" defer type="module"></script>
   </body>
 </html>
